--- a/ember-app/app/templates/application.hbs
+++ b/ember-app/app/templates/application.hbs
@@ -1,3 +1,8 @@
-<h2 id="title">Welcome to Ember</h2>
-
+{{!-- <div class="container-fluid">
+  <div id="navbar" class="">
+    <ul class="nav navbar-nav">
+      <li><a href="#">Placeholder</a></li>
+    </ul>
+  </div>
+</div> --}}
 {{outlet}}
