Displaying playlists successfully

--- a/ember-app/app/templates/components/playlist-item.hbs
+++ b/ember-app/app/templates/components/playlist-item.hbs
@@ -1,5 +1,3 @@
-<div class="playlist-item">
-  {{#link-to "playlists.playlist" playlist}}
-    {{playlist.title}}
-  {{/link-to}}
-</div>
+{{#link-to "playlists.playlist" playlist}}
+  <span class="glyphicon glyphicon-music"></span>&nbsp;&nbsp;{{playlist.title}}
+{{/link-to}}
