--- a/ember-app/app/templates/playlists/playlist.hbs
+++ b/ember-app/app/templates/playlists/playlist.hbs
@@ -1,5 +1,6 @@
 <ul>
   {{#each model.tracks as |track|}}
-    <li>{{track.title}}</li>
+    {{!-- <li>{{track.title}}</li> --}}
+    {{track-item track=track}}
   {{/each}}
 </ul>
