--- a/ember-app/app/templates/playlists.hbs
+++ b/ember-app/app/templates/playlists.hbs
@@ -3,7 +3,9 @@
     <div class="sidebar">
       <ul>
         {{#each model as |playlist|}}
-          {{playlist-item playlist=playlist}}
+          {{playlist-item 
+              playlist=playlist 
+              dropped="updatePlaylist"}}
         {{/each}}
       </ul>
     </div>
